plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'org.sopt'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java{
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

//    // 스프링 시큐리티를 사용하기 위한 스타터 추가
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//    // 타임리프에서 스프링 시큐리티를 사용하기 위한 의존성 추가
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
//    // 스프링 시큐리티를 테스트하기 위한 의존성 추가
//    testImplementation 'org.springframework.security:spring-security-test'

    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'mysql:mysql-connector-java:8.0.32'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    testImplementation 'org.assertj:assertj-core'
}

test {
    useJUnitPlatform()
}